<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cabin_teleop</name>
  <version>0.0.1</version>
  <description>Joystick controller for cabin's test underwater vehicle for ros2</description>
  <maintainer email="xiekb@pcl.ac.cn">Cabin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cabin_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
